# ai-provider-switcher

./: .gitignore  LICENSE  README.md  index.js  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html  main.js  provider-icons.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
test/: presets.test.js
